--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "yup": "^0.32.1"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
