--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.5",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.4",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
