--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server.js"
+    "dev:debug": "nodemon --inspect src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "dependencies": {
+    "@sentry/node": "^5.29.0",
+    "@sentry/tracing": "^5.29.0",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.3.1",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-handlebars": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
+    "youch": "^2.1.1",
     "yup": "^0.32.1"
   },
   "devDependencies": {
