--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sentry/tracing": "^5.29.0",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.3.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
